[Major Update] `SparkXcloud-Gdrive-MirrorBot v2.0`
- Change the repo name
- Add leech support
- Add thumbnail support
- Add search.py modules
- Add leech_settings.py modules
- Add new commands
- Add Qbittorrent search
- Update some modules
- Removed tar
- Del by reply
- Fix known bugs
- Switch to latest code
- Add some more trackers
- Add support all yandex links
- Add speedtest with picture
- Add some modules
- Add better YTDL playlist
- Fix known issues
- Many more...
Thanks to contributors 🌺

Signed-off-by: harshhaareddy <harshhaa03@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs
 aria2p
 attrdict
 beautifulsoup4
+bencoding
 cfscrape
 feedparser
 flask
@@ -16,7 +17,7 @@ pillow
 psutil
 psycopg2-binary
 pybase64
-pyrogram==1.4.16
+pyrogram
 python-dotenv
 python-magic
 python-telegram-bot
