--- a/config_sample.env
+++ b/config_sample.env
@@ -13,6 +13,7 @@ TELEGRAM_API =
 TELEGRAM_HASH = ""
 UPSTREAM_REPO = "https://github.com/Spark-X-Cloud/SparkXcloud-Gdrive-MirrorBot"
 UPSTREAM_BRANCH = "master"
+
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
@@ -28,21 +29,49 @@ MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = ""
-SHORTENER = ""
-SHORTENER_API = ""
+CMD_INDEX = ""
+
+# Leech
+TG_SPLIT_SIZE = ""
+AS_DOCUMENT = ""
+EQUAL_SPLITS = ""
+CUSTOM_FILENAME = ""
+
+# Rss
+RSS_DELAY = ""
+RSS_COMMAND = ""
+RSS_CHAT_ID = ""
+USER_STRING_SESSION = ""
+
 # qBittorrent
 IS_VPS = ""
 SERVER_PORT = "80"  # Only for VPS
 BASE_URL_OF_BOT = ""  # Required for Heroku
-# If you want to use Credentials externally from Index Links, fill these vars with the direct links
-# These are optional, if you don't know, simply leave them, don't fill anything in them.
+WEB_PINCODE = ""
+QB_SEED = ""
+QB_TIMEOUT = ""
+
+# Size Limits
+TORRENT_DIRECT_LIMIT = ""
+ZIP_UNZIP_LIMIT = ""
+CLONE_LIMIT = ""
+MEGA_LIMIT = ""
+STORAGE_THRESHOLD = ""
+
+# Shortener
+SHORTENER = ""
+SHORTENER_API = ""
+
+# GDTOT COOKIE
+CRYPT = ""
+
+# Pivate Files
 ACCOUNTS_ZIP_URL = ""
 TOKEN_PICKLE_URL = ""
-# To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
-TORRENT_DIRECT_LIMIT = ""
-TAR_UNZIP_LIMIT = ""
-CLONE_LIMIT = ""  
-MEGA_LIMIT = ""
+MULTI_SEARCH_URL = ""
+YT_COOKIES_URL = ""
+NETRC_URL = ""
+
 # Required for Heroku
 HEROKU_API_KEY = ""
 HEROKU_APP_NAME = ""
@@ -58,3 +87,23 @@ BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 IMAGE_URL = "https://telegra.ph/file/7ac7fa23a5c3d2bbba654.jpg"
+
+# Torrent Search
+SEARCH_API_LINK = ""
+SEARCH_LIMIT = ""
+SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/zooqle.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/eztv.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/kickass_torrent.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/yts_am.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/ettv.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
+                   "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
+                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
