--- a/config_sample.env
+++ b/config_sample.env
@@ -6,55 +6,89 @@ BOT_TOKEN = ""
 GDRIVE_FOLDER_ID = ""
 OWNER_ID =
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
+TELEGRAM_API =
 TELEGRAM_HASH = ""
-UPSTREAM_REPO = "https://github.com/Spark-X-Cloud/SparkXcloud-Gdrive-MirrorBot"
-UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+AUTHORIZED_CHATS = ""
+SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
-STATUS_LIMIT = ""  # Recommend limit status to 4 tasks max
+STATUS_LIMIT = ""
+STOP_DUPLICATE = ""
+CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
+TORRENT_TIMEOUT = ""
+EXTENTION_FILTER = ""
+INCOMPLETE_TASK_NOTIFIER = ""
+# Update
+UPSTREAM_REPO = "https://github.com/Spark-X-Cloud/SparkXcloud-Gdrive-MirrorBot"
+UPSTREAM_BRANCH = "master"
+# Leech
+TG_SPLIT_SIZE = ""
+AS_DOCUMENT = ""
+EQUAL_SPLITS = ""
+CUSTOM_FILENAME = ""
+# qBittorrent
+BASE_URL_OF_BOT = ""  # Required for Heroku
+SERVER_PORT = "80"  # Only for VPS
+WEB_PINCODE = ""
+QB_SEED = ""
+# RSS
+RSS_DELAY = ""
+RSS_COMMAND = ""
+RSS_CHAT_ID = ""
+USER_STRING_SESSION = ""
+# Private Files
+ACCOUNTS_ZIP_URL = ""
+TOKEN_PICKLE_URL = ""
+MULTI_SEARCH_URL = ""
+YT_COOKIES_URL = ""
+NETRC_URL = ""
+# Mega
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = "" 
-BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
+# Shortener
 SHORTENER = ""
 SHORTENER_API = ""
-# qBittorrent
-IS_VPS = ""
-SERVER_PORT = "80"  # Only for VPS
-BASE_URL_OF_BOT = ""  # Required for Heroku
-# If you want to use Credentials externally from Index Links, fill these vars with the direct links
-# These are optional, if you don't know, simply leave them, don't fill anything in them.
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
-# To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
+# GDTOT COOKIE
+CRYPT = ""
+# Size Limits
 TORRENT_DIRECT_LIMIT = ""
-TAR_UNZIP_LIMIT = ""
-CLONE_LIMIT = ""  
+ZIP_UNZIP_LIMIT = ""
+CLONE_LIMIT = ""
 MEGA_LIMIT = ""
-# Required for Heroku
-HEROKU_API_KEY = ""
-HEROKU_APP_NAME = ""
-# View Link button to open file Index Link in browser instead of direct download link
-# You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
-VIEW_LINK = "False"
-# Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
-# If you don't know what are below entries, simply leave them, Don't fill anything in them.
+STORAGE_THRESHOLD = ""
+# Buttons
+VIEW_LINK = ""
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
-IMAGE_URL = "https://telegra.ph/file/7ac7fa23a5c3d2bbba654.jpg"
+IMAGE_URL = "https://telegra.ph/file/9d9703906724616cf42ef.jpg"
+# Torrent Search
+SEARCH_API_LINK = ""
+SEARCH_LIMIT = ""
+SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/zooqle.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/eztv.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/kickass_torrent.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/yts_am.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/ettv.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
+                   "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
+                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
